--- a/src/main/resources/templates/header-footer.html
+++ b/src/main/resources/templates/header-footer.html
@@ -62,18 +62,17 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" th:href="@{${baseUrl}+'/employee/list'}">User
-                            List</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{${baseUrl}+'/user/list'}">Users</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link">Link</a>
+                        <a class="nav-link active" aria-current="page" th:href="@{${baseUrl}+'/employee/list'}">Employees</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                           aria-expanded="false">
+                           aria-expanded="false" id="dropdownMenuButton">
                             Dropdown
                         </a>
-                        <ul class="dropdown-menu">
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <li><a class="dropdown-item" href="#">Action</a></li>
                             <li><a class="dropdown-item" href="#">Another action</a></li>
                             <li>
@@ -104,8 +103,8 @@
     <!-- Copyright -->
     <div class="text-center p-3"
          style="position: relative;bottom: 0;width: 100%;background-color: rgba(0, 0, 0, 0.2);">
-        © 2020 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">EightSquare</a>
+        © 2022 Copyright:
+        <a class="text-dark" href="https://mdbootstrap.com/">Eight Square</a>
     </div>
     <!-- Copyright -->
 </div>
