--- a/src/main/resources/templates/header-footer.html
+++ b/src/main/resources/templates/header-footer.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <header>
     <div th:fragment="header_container">
         <meta charset="UTF-8">
@@ -53,7 +53,7 @@
 
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Eight Square</a>
+            <a class="navbar-brand" th:href="@{${baseUrl}+'/home'}">Eight Square</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent"
                     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,13 +61,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li sec:authorize="hasAuthority('ADMIN')" class="nav-item">
                         <a class="nav-link active" aria-current="page" th:href="@{${baseUrl}+'/user/list'}">Users</a>
                     </li>
-                    <li class="nav-item">
+                    <li sec:authorize="hasAnyAuthority('ADMIN','HR')" class="nav-item">
                         <a class="nav-link active" aria-current="page" th:href="@{${baseUrl}+'/employee/list'}">Employees</a>
                     </li>
-                    <li class="nav-item dropdown">
+                    <!--<li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                            aria-expanded="false" id="dropdownMenuButton">
                             Dropdown
@@ -80,7 +80,7 @@
                             </li>
                             <li><a class="dropdown-item" href="#">Something else here</a></li>
                         </ul>
-                    </li>
+                    </li>-->
                 </ul>
                 <form class="d-flex" role="search" method="post" action="/login">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
